fixing background effect of overflow page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,15 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Montserrat Alternates', sans-serif;
+    
 }
 .header{
     background: linear-gradient(90deg, #434343 0%, #000000 100%);
     border-radius: 0px 0px 30px 30px;
     color: white;
+    z-index: 3;
+    position: relative;
+    overflow: hidden;
 }
 .navbar{
     height:10vh ;
@@ -24,7 +28,10 @@
     
 }
 .nav-title>h2{
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);}
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: relative;
+    z-index: 2;
+}
 .nav-item{
     /* background-color: lawngreen; */
     width: 100%;
@@ -32,13 +39,26 @@
 .nav-item>ul{
     display: flex;
     list-style: none;
+    justify-content: center;
 }
 .nav-item>ul>li{
-    margin: 25px 7.5% 20px;
+    margin: 25px 5% 25px;
+}
+.nav-button{
+    padding-top: 1% ;
+    padding-right: 7%;
+}
+.nav-button>button{
     
+    height: 40px;
+    border: none;
+    width: 100px;
+    background: gray;
+    color: white;
+    border-radius: 15px;
 }
 .container{
-    height: 80vh;
+    height: auto;
     width: 100%;
     
 }
@@ -49,12 +69,11 @@
     border-radius: 30px;
 
     background: rgba(196, 196, 196, 0.22);
-border: 1px solid #FFFFFF;
-box-sizing: border-box;
-backdrop-filter: blur(8px);
-/* Note: backdrop-filter has minimal browser support */
-
-border-radius: 50px;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    backdrop-filter: blur(8px);
+    /* Note: backdrop-filter has minimal browser support */
+    border-radius: 50px;
 }
 .containt>.heading{
     width: 60%;
@@ -69,10 +88,12 @@ border-radius: 50px;
     text-align: center;
     margin-top: 3% ;
     /* background-color: lightgrey ; */
+
 }
 .containt>.button>button{
     height: 50px;
     width: 400px;
+    margin-bottom: 50px;
     border-radius: 30px;
     border: none;
     font-size: 20px;
@@ -82,4 +103,39 @@ border-radius: 50px;
     backdrop-filter: blur(15px);
     /* Note: backdrop-filter has minimal browser support */
     border-radius: 50px;
+}
+
+/* Oval Of Background effect */
+.oval-1{
+    height: 200px;
+    width: 200px;
+    border-radius: 100%;
+    position: absolute;
+    left: -1.5%;
+    background: linear-gradient(90deg, #A8EDEA 0%, #FED6E3 100%);
+}
+.oval-2{
+    height: 400px;
+    width: 400px;
+    border-radius: 100%;
+    position: absolute;
+    left: 75%;
+    top: 20%;
+    background: linear-gradient(90deg, #FBC2EB 0%, #A6C1EE 100%);
+    /* scroll-behavior: smooth; */
+   
+}
+
+.header-footer{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.header-footer>button{
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: white;
+    border: solid 2px white;
+
 }
